--- a/index-2.html
+++ b/index-2.html
@@ -2373,25 +2373,24 @@ traditional systems.
                           <span>+92 0123 4567</span>
                         </div>
                       </li> -->
-<<<<<<< HEAD
-                      <li
-=======
                       <!-- <li
->>>>>>> 9d88ad7ed0150907e54369075bd7b91d3651a43d
-                        class="animated"
+ ======= -->
+                      
+<!-- >>>>>>> 9d88ad7ed0150907e54369075bd7b91d3651a43d -->
+                        <!-- class="animated"
                         data-animate="fadeInUp"
                         data-delay="0.3"
                       >
                         <em class="contact-icon fas fa-envelope"></em>
                         <div class="contact-text">
                           <span>news@cmetal.link</span>
-                        </div>
-<<<<<<< HEAD
-                      </li>
-=======
-                      </li> -->
->>>>>>> 9d88ad7ed0150907e54369075bd7b91d3651a43d
-                      <!-- <li
+                        </div> -->
+<!-- <<<<<<< HEAD -->
+                      <!-- </li>
+
+                      
+
+                       <li
                         class="animated"
                         data-animate="fadeInUp"
                         data-delay="0.4"
