--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                       </div>
                     </li>
                     <li class="menu-item">
-                      <!-- <a class="menu-link nav-link" href="auction.html"
+                      <a class="menu-link nav-link" href="auction.html"
                         >Auction</a
-                      > -->
+                      >
                       <!-- <div class="menu-sub menu-drop menu-mega menu-mega-2clmn">
                                             <div class="menu-mega-innr">
                                                 <ul class="menu-mega-list">
@@ -1070,7 +1070,7 @@
                   <!-- roadmap-running -->
                   <div class="roadmap roadmap-s2 roadmap-i1 roadmap-running">
                     <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">October 2023</h5>
+                    <h5 class="title title-sm roadmap-date">March 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Token Creation / Early Investor Release / Marketing
@@ -1079,8 +1079,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i2">
-                    <h6 class="roadmap-year-s2">Q4 2023</h6>
-                    <h5 class="title title-sm roadmap-date">November 2023</h5>
+                    <h6 class="roadmap-year-s2">Q2 2023</h6>
+                    <h5 class="title title-sm roadmap-date">April 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Framework Development / Public Release for
@@ -1089,8 +1089,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i3">
-                    <h6 class="roadmap-year-s2">Q4 2023</h6>
-                    <h5 class="title title-sm roadmap-date">December 2023</h5>
+                    <h6 class="roadmap-year-s2">Q3 2023</h6>
+                    <h5 class="title title-sm roadmap-date">June 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Public Crowdfunding with 3 Month Lock with early Staking
@@ -1100,8 +1100,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i4">
-                    <h6 class="roadmap-year-s2">Q1 2024</h6>
-                    <h5 class="title title-sm roadmap-date">February 2023</h5>
+                    <h6 class="roadmap-year-s2">Q3 2023</h6>
+                    <h5 class="title title-sm roadmap-date">July 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Early Adopters Crowdfunding / DEX Listings /
@@ -1110,8 +1110,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i5">
-                    <h6 class="roadmap-year-s2">Q2 2024</h6>
-                    <h5 class="title title-sm roadmap-date">April 2024</h5>
+                    <h6 class="roadmap-year-s2">Q3 2023</h6>
+                    <h5 class="title title-sm roadmap-date">August 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Public Crowdfunding (no strings attached) / Governance
@@ -1120,8 +1120,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i6">
-                    <h6 class="roadmap-year-s2">Q2 2024</h6>
-                    <h5 class="title title-sm roadmap-date">April 2024</h5>
+                    <h6 class="roadmap-year-s2">Q3 2023</h6>
+                    <h5 class="title title-sm roadmap-date">September 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Community Vote Token Release Event / Marketing and
@@ -1130,8 +1130,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i7">
-                    <h6 class="roadmap-year-s2">Q3 2024</h6>
-                    <h5 class="title title-sm roadmap-date">August 2023</h5>
+                    <h6 class="roadmap-year-s2">Q4 2023</h6>
+                    <h5 class="title title-sm roadmap-date">October 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         dAPP Platform Public Beta Testing / Regional Marketing
@@ -1140,8 +1140,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i8">
-                    <h6 class="roadmap-year-s2">Q4 2024</h6>
-                    <h5 class="title title-sm roadmap-date">September 2024</h5>
+                    <h6 class="roadmap-year-s2">Q4 2023</h6>
+                    <h5 class="title title-sm roadmap-date">November 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Public Opening / Regional Expansion /
@@ -1151,8 +1151,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i9">
-                    <h6 class="roadmap-year-s2">Q3 2024</h6>
-                    <h5 class="title title-sm roadmap-date">September 2024</h5>
+                    <h6 class="roadmap-year-s2">Q1 2024</h6>
+                    <h5 class="title title-sm roadmap-date">March 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Community Vote Token Release Event / Regional Product
@@ -1161,8 +1161,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i10">
-                    <h6 class="roadmap-year-s2">Q4 2024</h6>
-                    <h5 class="title title-sm roadmap-date">October 2024</h5>
+                    <h6 class="roadmap-year-s2">Q2 2024</h6>
+                    <h5 class="title title-sm roadmap-date">May 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         New Benefits for Token Holders / Geo Platform Expansion
@@ -1171,8 +1171,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i11">
-                    <h6 class="roadmap-year-s2">Q4 2024</h6>
-                    <h5 class="title title-sm roadmap-date">November 2024</h5>
+                    <h6 class="roadmap-year-s2">Q3 2024</h6>
+                    <h5 class="title title-sm roadmap-date">July 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Regional Marketing Events / cMetal Staff Recruitment /
@@ -1181,8 +1181,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i12">
-                    <h6 class="roadmap-year-s2">Q1 2025</h6>
-                    <h5 class="title title-sm roadmap-date">February 2025</h5>
+                    <h6 class="roadmap-year-s2">Q4 2024</h6>
+                    <h5 class="title title-sm roadmap-date">November 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Continental Office Expansion / New Token Adoption / 2025
@@ -1191,8 +1191,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i13">
-                    <h6 class="roadmap-year-s2">Q2 2025</h6>
-                    <h5 class="title title-sm roadmap-date">April 2024</h5>
+                    <h6 class="roadmap-year-s2">Q1 2025</h6>
+                    <h5 class="title title-sm roadmap-date">February 2025</h5>
                     <div class="roadmap-text">
                       <p>
                         Regional Client Expansion / Staking Downsizing / dAPP
@@ -1201,8 +1201,8 @@
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i14">
-                    <h6 class="roadmap-year-s2">Q3 2026</h6>
-                    <h5 class="title title-sm roadmap-date">September 2030</h5>
+                    <h6 class="roadmap-year-s2">Q1 2026</h6>
+                    <h5 class="title title-sm roadmap-date">March 2026</h5>
                     <div class="roadmap-text">
                       <p>Community Vote Token Release Event</p>
                     </div>
@@ -2275,7 +2275,7 @@
                         back to you shortly.
                       </p>
                     </div>
-                    <form class="nk-form-submit" onsubmit="sendMail();">
+                    <form class="nk-form-submit" onsubmit="return sendMail();">
                       <div class="row">
                         <div class="col-sm-6">
                           <div
@@ -2372,7 +2372,7 @@
                           <span>+92 0123 4567</span>
                         </div>
                       </li> -->
-                      <!-- <li
+                      <li
                         class="animated"
                         data-animate="fadeInUp"
                         data-delay="0.3"
@@ -2381,7 +2381,7 @@
                         <div class="contact-text">
                           <span>news@cmetal.link</span>
                         </div>
-                      </li> -->
+                      </li>
                       <!-- <li
                         class="animated"
                         data-animate="fadeInUp"
@@ -2459,10 +2459,32 @@
       /></span>
     </div>
     <!-- JavaScript -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="assets/js/jquery.bundlea166.js?ver=200"></script>
     <script src="assets/js/scriptsa166.js?ver=200"></script>
     <script src="assets/js/chartsa166.js?ver=200"></script>
     <script src="assets/js/toastr.examplesa166.js?ver=200"></script>
+    <script>
+      emailjs.init("YOUR_USER_ID");
+    
+      function sendMail() {
+        emailjs.send("service_f1lyl5h", "template_tm4io7o", {
+          "from_name": document.getElementById("from-name").value,
+          "email": document.getElementById("email").value,
+          "message": document.getElementById("msg").value,
+        })
+        .then(function(response) {
+          console.log("Email sent successfully", response);
+          // Handle success here, e.g., display a success message to the user
+        }, function(error) {
+          console.error("Email could not be sent", error);
+          // Handle errors here, e.g., display an error message to the user
+        });
+        return false; // Prevent the form from submitting normally
+      }
+    </script>
+    
+
   </body>
 
   <!-- Mirrored from cmetal.link/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 08:46:20 GMT -->
