--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ window.sendMails = sendMails;
                       </div>
                     </li>
                     <li class="menu-item">
-                      <a class="menu-link nav-link" href="auction.html"
+                      <!-- <a class="menu-link nav-link" href="auction.html"
                         >Auction</a
-                      >
+                      > -->
                       <!-- <div class="menu-sub menu-drop menu-mega menu-mega-2clmn">
                                             <div class="menu-mega-innr">
                                                 <ul class="menu-mega-list">
@@ -1125,7 +1125,7 @@ window.sendMails = sendMails;
                   <!-- roadmap-running -->
                   <div class="roadmap roadmap-s2 roadmap-i1 roadmap-running">
                     <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">March 2023</h5>
+                    <h5 class="title title-sm roadmap-date">October 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Token Creation / Early Investor Release / Marketing
@@ -1134,8 +1134,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i2">
-                    <h6 class="roadmap-year-s2">Q2 2023</h6>
-                    <h5 class="title title-sm roadmap-date">April 2023</h5>
+                    <h6 class="roadmap-year-s2">Q4 2023</h6>
+                    <h5 class="title title-sm roadmap-date">November 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Framework Development / Public Release for
@@ -1144,8 +1144,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i3">
-                    <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">June 2023</h5>
+                    <h6 class="roadmap-year-s2">Q4 2023</h6>
+                    <h5 class="title title-sm roadmap-date">December 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Public Crowdfunding with 3 Month Lock with early Staking
@@ -1155,8 +1155,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i4">
-                    <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">July 2023</h5>
+                    <h6 class="roadmap-year-s2">Q1 2024</h6>
+                    <h5 class="title title-sm roadmap-date">February 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Early Adopters Crowdfunding / DEX Listings /
@@ -1165,8 +1165,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i5">
-                    <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">August 2023</h5>
+                    <h6 class="roadmap-year-s2">Q2 2024</h6>
+                    <h5 class="title title-sm roadmap-date">April 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Public Crowdfunding (no strings attached) / Governance
@@ -1175,8 +1175,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i6">
-                    <h6 class="roadmap-year-s2">Q3 2023</h6>
-                    <h5 class="title title-sm roadmap-date">September 2023</h5>
+                    <h6 class="roadmap-year-s2">Q2 2024</h6>
+                    <h5 class="title title-sm roadmap-date">April 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Community Vote Token Release Event / Marketing and
@@ -1185,8 +1185,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i7">
-                    <h6 class="roadmap-year-s2">Q4 2023</h6>
-                    <h5 class="title title-sm roadmap-date">October 2023</h5>
+                    <h6 class="roadmap-year-s2">Q3 2024</h6>
+                    <h5 class="title title-sm roadmap-date">August 2023</h5>
                     <div class="roadmap-text">
                       <p>
                         dAPP Platform Public Beta Testing / Regional Marketing
@@ -1195,8 +1195,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i8">
-                    <h6 class="roadmap-year-s2">Q4 2023</h6>
-                    <h5 class="title title-sm roadmap-date">November 2023</h5>
+                    <h6 class="roadmap-year-s2">Q4 2024</h6>
+                    <h5 class="title title-sm roadmap-date">September 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Platform Public Opening / Regional Expansion /
@@ -1206,8 +1206,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i9">
-                    <h6 class="roadmap-year-s2">Q1 2024</h6>
-                    <h5 class="title title-sm roadmap-date">March 2024</h5>
+                    <h6 class="roadmap-year-s2">Q3 2024</h6>
+                    <h5 class="title title-sm roadmap-date">September 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Community Vote Token Release Event / Regional Product
@@ -1216,8 +1216,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i10">
-                    <h6 class="roadmap-year-s2">Q2 2024</h6>
-                    <h5 class="title title-sm roadmap-date">May 2024</h5>
+                    <h6 class="roadmap-year-s2">Q4 2024</h6>
+                    <h5 class="title title-sm roadmap-date">October 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         New Benefits for Token Holders / Geo Platform Expansion
@@ -1226,8 +1226,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i11">
-                    <h6 class="roadmap-year-s2">Q3 2024</h6>
-                    <h5 class="title title-sm roadmap-date">July 2024</h5>
+                    <h6 class="roadmap-year-s2">Q4 2024</h6>
+                    <h5 class="title title-sm roadmap-date">November 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Regional Marketing Events / cMetal Staff Recruitment /
@@ -1236,8 +1236,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i12">
-                    <h6 class="roadmap-year-s2">Q4 2024</h6>
-                    <h5 class="title title-sm roadmap-date">November 2024</h5>
+                    <h6 class="roadmap-year-s2">Q1 2025</h6>
+                    <h5 class="title title-sm roadmap-date">February 2025</h5>
                     <div class="roadmap-text">
                       <p>
                         Continental Office Expansion / New Token Adoption / 2025
@@ -1246,8 +1246,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i13">
-                    <h6 class="roadmap-year-s2">Q1 2025</h6>
-                    <h5 class="title title-sm roadmap-date">February 2025</h5>
+                    <h6 class="roadmap-year-s2">Q2 2025</h6>
+                    <h5 class="title title-sm roadmap-date">April 2024</h5>
                     <div class="roadmap-text">
                       <p>
                         Regional Client Expansion / Staking Downsizing / dAPP
@@ -1256,8 +1256,8 @@ window.sendMails = sendMails;
                     </div>
                   </div>
                   <div class="roadmap roadmap-s2 roadmap-i14">
-                    <h6 class="roadmap-year-s2">Q1 2026</h6>
-                    <h5 class="title title-sm roadmap-date">March 2026</h5>
+                    <h6 class="roadmap-year-s2">Q3 2026</h6>
+                    <h5 class="title title-sm roadmap-date">September 2030</h5>
                     <div class="roadmap-text">
                       <p>Community Vote Token Release Event</p>
                     </div>
@@ -2330,7 +2330,7 @@ window.sendMails = sendMails;
                         back to you shortly.
                       </p>
                     </div>
-                    <form class="nk-form-submit" onsubmit="return sendMails();">
+                    <form class="nk-form-submit" onsubmit="sendMails();">
                       <div class="row">
                         <div class="col-sm-6">
                           <div
